# claude-code-doc-monitor

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: monitor.yml
config/: config.yaml  test_config.yaml  test_pages.yaml
config/pages/: anthropic-api.yaml  claude-code-github.yaml  claude-code.yaml
docs/: IMPLEMENTATION_PLAN.md  SUMMARY.md  claude-code-doc-monitor-process-infographic.html
docs/anthropic-api/: get-started.md
docs/claude-code/: amazon-bedrock.md  analytics.md  checkpointing.md  chrome.md  claude-code-on-the-web.md  cli-reference.md  common-workflows.md  costs.md  data-usage.md  desktop.md  devcontainer.md  discover-plugins.md  github-actions.md  gitlab-ci-cd.md  google-vertex-ai.md  headless.md  hooks-guide.md  hooks.md  iam.md  interactive-mode.md  jetbrains.md  legal-and-compliance.md  llm-gateway.md  mcp.md  memory.md  microsoft-foundry.md  model-config.md  monitoring-usage.md  network-config.md  output-styles.md  overview.md  plugin-marketplaces.md  plugins-reference.md  plugins.md  quickstart.md  sandboxing.md  security.md  settings.md  setup.md  skills.md  (+8 more)
docs/claude-code-github/: CHANGELOG.md
docs/en/: overview.md  quickstart.md
reports/: index.html
src/: __init__.py  analyzer.py  config.py  differ.py  fetcher.py  main.py  notifier.py  reporter.py
templates/: daily_index.html  main_index.html  page_diff.html
tests/: __init__.py  test_analyzer.py  test_config.py  test_differ.py  test_fetcher.py  test_main.py  test_notifier.py  test_reporter.py
tests/e2e/: __init__.py  conftest.py  (+1 more)
(+4380 files in other folders)
