[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-code-doc-monitor"
version = "0.1.0"
description = "Monitor Claude Code documentation for updates"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-telegram-bot>=21.0",
    "diff-match-patch>=20230430",
    "Jinja2>=3.1.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "respx>=0.21.0",
    "aiohttp>=3.9.0",  # For E2E test HTTP server
]

[project.scripts]
doc-monitor = "src.main:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"
markers = [
    "e2e: End-to-end tests for full pipeline",
    "real_telegram: Tests that send real Telegram notifications",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
